// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two no pic and two - small 1`] = `
<View>
  <Text>
    secondary-1
  </Text>
  <View />
  <Text>
    secondary-2
  </Text>
  <View />
  <Text>
    support-1
  </Text>
  <View />
  <Text>
    support-2
  </Text>
</View>
`;

exports[`2. secondary two no pic and two - medium 1`] = `
Array [
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <View>
      <Text>
        support-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>,
]
`;

exports[`3. secondary two no pic and two - wide 1`] = `
<View>
  <View>
    <Text>
      secondary-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      secondary-2
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support-2
    </Text>
  </View>
</View>
`;

exports[`4. secondary two no pic and two - huge 1`] = `
<View>
  <View>
    <Text>
      secondary-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      secondary-2
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support-2
    </Text>
  </View>
</View>
`;
